GNOME Bugzilla – Bug 753828
region: If language isn't set in AccountsService, show current locale
Last modified: 2015-08-25 11:18:25 UTC
Downstream report: https://bugzilla.redhat.com/show_bug.cgi?id=1148382
Created attachment 309601 [details] [review] region: If language isn't set in AccountsService, show current locale For newly created user accounts, AccountsService won't have the language property set. Instead of defaulting to en_US in that case, let's fallback to the current locale.
Review of attachment 309601 [details] [review]: Looks good otherwise. ::: panels/region/cc-region-panel.c @@ +630,3 @@ language = act_user_get_language (priv->user); + + if (language == NULL || language[0] == '\0') I prefer *language == '\0'
Attachment 309601 [details] pushed as 4a91056 - region: If language isn't set in AccountsService, show current locale