region: If language isn't set in AccountsService, show current locale

For newly created user accounts, AccountsService won't have the
language property set. Instead of defaulting to en_US in that case,
let's fallback to the current locale.

https://bugzilla.gnome.org/show_bug.cgi?id=753828